--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,9 +7,9 @@
     <title>{{ page.title }}</title>
 
     <!-- CSS -->
-    <link href="{{ site.baseurl }}/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="{{ site.baseurl }}/assets/css/class.css" rel="stylesheet">   
-    <link href="{{ site.baseurl }}/assets/css/syntax.css" rel="stylesheet">
+    <link href="{{ site.url }}{{ site.baseurl }}/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{{ site.url }}{{ site.baseurl }}/assets/css/class.css" rel="stylesheet">   
+    <link href="{{ site.url }}{{ site.baseurl }}/assets/css/syntax.css" rel="stylesheet">
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -44,19 +44,19 @@
             <span class="icon-bar"></span>
           </button>
           <ul class="nav navbar-nav">
-            <div class="hidden-sm hidden-xs"><li id="main_page"><a href="index.html" class="navbar-brand">Computer Science I</a></li></div>
-            <div class="visible-sm visible-xs"><li id="main_page"><a href="index.html" class="navbar-brand">CS113</a></li></div>
+            <div class="hidden-sm hidden-xs"><li id="main_page"><a href="{{ site.url }}{{ site.baseurl }}/index.html" class="navbar-brand">Computer Science I</a></li></div>
+            <div class="visible-sm visible-xs"><li id="main_page"><a href="{{ site.url }}{{ site.baseurl }}/index.html" class="navbar-brand">CS113</a></li></div>
           </ul>
         </div>
         <nav class="collapse navbar-collapse" role="navigation">
           <ul class="nav navbar-nav">
-            <li id="schedule"><a href="schedule.html#now">Schedule</a></li>
-            <li id="policies"><a href="policies.html#now">Policies</a></li>
-            <li id="staff"><a href="staff.html">Staff</a></li>
+            <li id="schedule"><a href="{{ site.url }}{{ site.baseurl }}/schedule.html#now">Schedule</a></li>
+            <li id="policies"><a href="{{ site.url }}{{ site.baseurl }}/policies.html#now">Policies</a></li>
+            <li id="staff"><a href="{{ site.url }}{{ site.baseurl }}/staff.html">Staff</a></li>
             <li id="assignments">
 		<a class="dropdown-toggle" data-toggle="dropdown" href="#">Homeworks<span class="caret"></span></a>
 		<ol class="dropdown-menu">
-		<li><a href="{{ site.baseurl }}/hws/hw00.html">HW00</a></li>
+		<li><a href="{{ site.url }}{{ site.baseurl }}/hws/hw00.html">HW00</a></li>
 		<li><a href="">HW01</a></li>
 		</ol>
             </li>
@@ -70,8 +70,8 @@
             <li id="resources">
 		<a class="dropdown-toggle" data-toggle="dropdown" href="#">Resources<span class="caret"></span></a>
 		<ol class="dropdown-menu">
-		<li><a href="bash-commands.html">Bash Commands</a></li>
-		<li><a href="office-hours.html">Office Hours</a></li>
+		<li><a href="{{ site.url }}/{{ site.baseurl }}/bash-commands.html">Bash Commands</a></li>
+		<li><a href="{{ site.url }}/{{ site.baseurl }}/office-hours.html">Office Hours</a></li>
 		</ol>
 	    <li>
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">Links<span class="caret"></span></a>
@@ -137,7 +137,7 @@ might be outdated from the Fall 2020 immersive version of this course.
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="{{ site.baseurl }}/dist/js/bootstrap.js"></script>
+    <script src="{{ site.url }}/{{ site.baseurl }}/dist/js/bootstrap.js"></script>
     <script type="text/javascript">
       $(document).ready(function(){
         $("#{{ page.active_tab }}").addClass("active");
