fixing broken links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,7 +56,7 @@
             <li id="assignments">
 		<a class="dropdown-toggle" data-toggle="dropdown" href="#">Homeworks<span class="caret"></span></a>
 		<ol class="dropdown-menu">
-		<li><a href="{{ site.url }}{{ site.baseurl }}/hws/hw00.html">HW00</a></li>
+		<li><a href="{{ site.url }}{{ site.baseurl }}/hws/HW00.html">HW00</a></li>
 		<li><a href="">HW01</a></li>
 		</ol>
             </li>
