--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -63,7 +63,7 @@
             <li id="labs">
 		<a class="dropdown-toggle" data-toggle="dropdown" href="#">Labs<span class="caret"></span></a>
 		<ol class="dropdown-menu">
-		<li><a href="">Lab00</a></li>
+		<li><a href="{{ site.url }}{{ site.baseurl }}/labs/lab00.html">Lab00</a></li>
 		<li><a href="">Lab01</a></li>
 		</ol>
             </li>
