--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -70,6 +70,7 @@
             <li id="resources">
 		<a class="dropdown-toggle" data-toggle="dropdown" href="#">Resources<span class="caret"></span></a>
 		<ol class="dropdown-menu">
+		<li><a href="https://cs.brynmawr.edu/cs113/textbook/cs113Textbook.pdf">Textbook</a></li>
 		<li><a href="{{ site.url }}/{{ site.baseurl }}/bash-commands.html">Bash Commands</a></li>
 		<li><a href="{{ site.url }}/{{ site.baseurl }}/office-hours.html">Office Hours</a></li>
 		</ol>
