header: added piazza and gradescope links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -77,8 +77,8 @@
 	    <li>
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">Links<span class="caret"></span></a>
 		<ol class="dropdown-menu">
-		<li><a href="">Gradescope</a></li>
-                <li><a href="">Piazza</a></li>
+		<li><a href="https://www.gradescope.com/">Gradescope</a></li>
+                <li><a href="https://piazza.com/class/lbmyxir25c077o">Piazza</a></li>
 		</ol>
 
            </li>
