--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,14 +57,14 @@
 		<a class="dropdown-toggle" data-toggle="dropdown" href="#">Homeworks<span class="caret"></span></a>
 		<ol class="dropdown-menu">
 		<li><a href="{{ site.url }}{{ site.baseurl }}/hws/HW00.html">HW00</a></li>
-		<li><a href="">HW01</a></li>
+		<li><a href="{{ site.url }}{{ site.baseurl }}/hws/HW01.html">HW01</a></li>
 		</ol>
             </li>
             <li id="labs">
 		<a class="dropdown-toggle" data-toggle="dropdown" href="#">Labs<span class="caret"></span></a>
 		<ol class="dropdown-menu">
 		<li><a href="{{ site.url }}{{ site.baseurl }}/labs/Lab00.html">Lab00</a></li>
-		<li><a href="">Lab01</a></li>
+		<li><a href="{{ site.url }}{{ site.baseurl }}/labs/Lab01.html">Lab01</a></li>
 		</ol>
             </li>
             <li id="resources">
