--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,6 +58,8 @@
 		<ol class="dropdown-menu">
 		<li><a href="{{ site.url }}{{ site.baseurl }}/hws/HW00.html">HW00</a></li>
 		<li><a href="{{ site.url }}{{ site.baseurl }}/hws/HW01.html">HW01</a></li>
+		<li><a href="{{ site.url }}{{ site.baseurl }}/hws/HW02.html">HW02</a></li>
+		<li><a href="{{ site.url }}{{ site.baseurl }}/hws/HW03.html">HW03</a></li>
 		</ol>
             </li>
             <li id="labs">
@@ -65,12 +67,15 @@
 		<ol class="dropdown-menu">
 		<li><a href="{{ site.url }}{{ site.baseurl }}/labs/Lab00.html">Lab00</a></li>
 		<li><a href="{{ site.url }}{{ site.baseurl }}/labs/Lab01.html">Lab01</a></li>
+		<li><a href="{{ site.url }}{{ site.baseurl }}/labs/Lab02.html">Lab02</a></li>
+		<li><a href="{{ site.url }}{{ site.baseurl }}/labs/Lab03.html">Lab03</a></li>
 		</ol>
             </li>
             <li id="resources">
 		<a class="dropdown-toggle" data-toggle="dropdown" href="#">Resources<span class="caret"></span></a>
 		<ol class="dropdown-menu">
-		<li><a href="https://cs.brynmawr.edu/cs113/textbook/cs113Textbook.pdf">Textbook</a></li>
+		<li><a href="https://github.com/BMC-CS-113/class-examples-s23">In Class Code</a></li>
+		<li><a href="https://cs.brynmawr.edu/cs113/website/textbook/cs113Textbook.pdf">Textbook</a></li>
 		<li><a href="{{ site.url }}/{{ site.baseurl }}/bash-commands.html">Bash Commands</a></li>
 		<li><a href="{{ site.url }}/{{ site.baseurl }}/office-hours.html">Office Hours</a></li>
 		</ol>
