--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -60,6 +60,7 @@
 		<li><a href="{{ site.url }}{{ site.baseurl }}/hws/HW01.html">HW01</a></li>
 		<li><a href="{{ site.url }}{{ site.baseurl }}/hws/HW02.html">HW02</a></li>
 		<li><a href="{{ site.url }}{{ site.baseurl }}/hws/HW03.html">HW03</a></li>
+		<li><a href="{{ site.url }}{{ site.baseurl }}/hws/HW04.html">HW04</a></li>
 		</ol>
             </li>
             <li id="labs">
@@ -69,6 +70,7 @@
 		<li><a href="{{ site.url }}{{ site.baseurl }}/labs/Lab01.html">Lab01</a></li>
 		<li><a href="{{ site.url }}{{ site.baseurl }}/labs/Lab02.html">Lab02</a></li>
 		<li><a href="{{ site.url }}{{ site.baseurl }}/labs/Lab03.html">Lab03</a></li>
+		<li><a href="{{ site.url }}{{ site.baseurl }}/labs/Lab04.html">Lab04</a></li>
 		</ol>
             </li>
             <li id="resources">
