--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -61,6 +61,7 @@
 		<li><a href="{{ site.url }}{{ site.baseurl }}/hws/HW02.html">HW02</a></li>
 		<li><a href="{{ site.url }}{{ site.baseurl }}/hws/HW03.html">HW03</a></li>
 		<li><a href="{{ site.url }}{{ site.baseurl }}/hws/HW04.html">HW04</a></li>
+		<li><a href="{{ site.url }}{{ site.baseurl }}/hws/HW05.html">HW05</a></li>
 		</ol>
             </li>
             <li id="labs">
