--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,37 +56,54 @@
             <li id="assignments">
 		<a class="dropdown-toggle" data-toggle="dropdown" href="#">Homeworks<span class="caret"></span></a>
 		<ol class="dropdown-menu">
+                <!--
 		<li><a href="{{ site.url }}{{ site.baseurl }}/hws/HW00.html">HW00</a></li>
 		<li><a href="{{ site.url }}{{ site.baseurl }}/hws/HW01.html">HW01</a></li>
 		<li><a href="{{ site.url }}{{ site.baseurl }}/hws/HW02.html">HW02</a></li>
 		<li><a href="{{ site.url }}{{ site.baseurl }}/hws/HW03.html">HW03</a></li>
 		<li><a href="{{ site.url }}{{ site.baseurl }}/hws/HW04.html">HW04</a></li>
 		<li><a href="{{ site.url }}{{ site.baseurl }}/hws/HW05.html">HW05</a></li>
+		<li><a href="{{ site.url }}{{ site.baseurl }}/hws/HW06.html">HW06</a></li>
+		<li><a href="{{ site.url }}{{ site.baseurl }}/hws/HW07.html">HW07</a></li>
+		<li><a href="{{ site.url }}{{ site.baseurl }}/hws/HW08.html">HW08</a></li>
+		<li><a href="{{ site.url }}{{ site.baseurl }}/hws/HW09.html">HW09</a></li>
+                -->
 		</ol>
             </li>
             <li id="labs">
 		<a class="dropdown-toggle" data-toggle="dropdown" href="#">Labs<span class="caret"></span></a>
 		<ol class="dropdown-menu">
+                <!--
 		<li><a href="{{ site.url }}{{ site.baseurl }}/labs/Lab00.html">Lab00</a></li>
 		<li><a href="{{ site.url }}{{ site.baseurl }}/labs/Lab01.html">Lab01</a></li>
 		<li><a href="{{ site.url }}{{ site.baseurl }}/labs/Lab02.html">Lab02</a></li>
 		<li><a href="{{ site.url }}{{ site.baseurl }}/labs/Lab03.html">Lab03</a></li>
 		<li><a href="{{ site.url }}{{ site.baseurl }}/labs/Lab04.html">Lab04</a></li>
+		<li><a href="{{ site.url }}{{ site.baseurl }}/labs/Lab05.html">Lab05</a></li>
+		<li><a href="{{ site.url }}{{ site.baseurl }}/labs/Lab06.html">Lab06</a></li>
+		<li><a href="{{ site.url }}{{ site.baseurl }}/labs/Lab07.html">Lab07</a></li>
+		<li><a href="{{ site.url }}{{ site.baseurl }}/labs/Lab08.html">Lab08</a></li>
+		<li><a href="{{ site.url }}{{ site.baseurl }}/labs/Lab09.html">Lab09</a></li>
+		<li><a href="{{ site.url }}{{ site.baseurl }}/labs/Lab10.html">Lab10</a></li>
+		<li><a href="{{ site.url }}{{ site.baseurl }}/labs/Lab11.html">Lab11</a></li>
+                -->
 		</ol>
             </li>
             <li id="resources">
 		<a class="dropdown-toggle" data-toggle="dropdown" href="#">Resources<span class="caret"></span></a>
 		<ol class="dropdown-menu">
-		<li><a href="https://github.com/BMC-CS-113/class-examples-s23">In Class Code</a></li>
+		<li><a href="https://github.com/BMC-CS-113/class-examples-f23">In Class Code</a></li>
 		<li><a href="https://cs.brynmawr.edu/cs113/website/textbook/cs113Textbook.pdf">Textbook</a></li>
 		<li><a href="{{ site.url }}/{{ site.baseurl }}/bash-commands.html">Bash Commands</a></li>
 		<li><a href="{{ site.url }}/{{ site.baseurl }}/office-hours.html">Office Hours</a></li>
+		<li><a href="{{ site.url }}/{{ site.baseurl }}/Midterm1_practice.pdf">Midterm 1 Practice</a></li>
+		<li><a href="{{ site.url }}/{{ site.baseurl }}/Midterm2_practice.pdf">Midterm 2 Practice</a></li>
 		</ol>
 	    <li>
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">Links<span class="caret"></span></a>
 		<ol class="dropdown-menu">
 		<li><a href="https://www.gradescope.com/">Gradescope</a></li>
-                <li><a href="https://piazza.com/class/lbmyxir25c077o">Piazza</a></li>
+                <li><a href="https://piazza.com/class/llmewvneqcr0">Piazza</a></li>
 		</ol>
 
            </li>
