--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -93,7 +93,7 @@
 		<a class="dropdown-toggle" data-toggle="dropdown" href="#">Resources<span class="caret"></span></a>
 		<ol class="dropdown-menu">
 		<li><a href="https://github.com/BMC-CS-113/class-examples-f23">In Class Code</a></li>
-		<li><a href="https://cs.brynmawr.edu/cs113/website/textbook/cs113Textbook.pdf">Textbook</a></li>
+		<li><a href="{{ site.url }}/{{ site.baseurl }}/textbook/cs113Textbook.pdf">Textbook</a></li>
 		<li><a href="{{ site.url }}/{{ site.baseurl }}/bash-commands.html">Bash Commands</a></li>
 		<li><a href="{{ site.url }}/{{ site.baseurl }}/office-hours.html">Office Hours</a></li>
 		<li><a href="{{ site.url }}/{{ site.baseurl }}/Midterm1_practice.pdf">Midterm 1 Practice</a></li>
